[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luta-camel"
version = "0.1.0"
description = "Luta customized CAMEL-AI agents"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openai>=1.86.0,<2.0.0",
    "tiktoken>=0.7.0,<0.8",
    "pydantic>=2.10.6",
    "pillow>=10.1.0",
    "colorama>=0.4.6,<0.5",
    "jsonschema>=4,<5",
    "docstring-parser>=0.15,<0.16",
    "httpx>=0.28.0,<1.0.0dev",
    "psutil>=5.9.8,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<8",
    "mypy>=1.5.1,<2",
]
